pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-264-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/264-list_items.md
---
• Foo


  [33m[48;5;236m  bar[K[0m
[33m[48;5;236m  [K[0m
[33m[48;5;236m  [K[0m
[33m[48;5;236m  baz[K[0m
