pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-271-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/271-list_items.md
---
10. foo


        [33mbar
[0m
