pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-272-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/272-list_items.md
---

[33m[48;5;236mindented code[K[0m


paragraph


[33m[48;5;236mmore code[K[0m
