pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-274-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/274-list_items.md
---
 1. 

        [33m indented code
[0m    

    paragraph


        [33mmore code
[0m
