pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-286-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/286-list_items.md
---
 1. A paragraph with two lines.


        [33mindented code
[0m    

    [36m│[0m [3mA block quote.[0m
